Exporting to glitchdotcom/glitch-hello-website ./style.css:31317407/252 ./script.js:31317407/2018 ./index.html:31317407/6092 ./README.md:31317407/4962

--- a/style.css
+++ b/style.css
@@ -182,3 +182,14 @@ h2 {
 .dipped {
   transform: translateY(5px);
 }
+
+/* Links that open files in the editor */
+.fileopener {
+  cursor:pointer;
+  font-weight:bold;
+  border-bottom:3px solid var(--color-primary);
+  color: var(--color-secondary);
+}
+.fileopener:hover {
+  border-bottom:3px solid var(--color-secondary);
+}
