🌧💝 Checkpoint ./2index.html:60785523/432 ./style3.css:60785523/758 ./56new.html:60785523/411 ./57new.html:60785523/403 ./.glitch-assets:60785523/376

--- a/style3.css
+++ b/style3.css
@@ -1,4 +1,10 @@
 body {
+      background-color: navy; /* Set the background color to navy */
+            color: white; /* Text color set for readability */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+     
     margin: 0; /* Remove default margin */
     height: 100vh; /* Full height of the viewport */
     
